--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </ul>
           </div>
           <div class="shadow p-3 mb-5 bg-body rounded" id="content">
-            <img src="red1\31koLd8AcwL._AC_SY780_.jpg" alt="gotcha">
+            <img src="\gotya.jpg" alt="gotcha">
             <h1> HAHA there is no game</h1>
             <h3>pero ya que estamos mira este reloj</h3>
             <div>
